log

Wed 13 Mar 2024 08:31:06 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:21:3: error: expected identifier or ‘(’ before ‘return’
   21 | } return numeroMax;
      |   ^~~~~~
Compilation failed
5bd7dc0
Wed 13 Mar 2024 08:31:23 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:22:1: error: expected identifier or ‘(’ before ‘return’
   22 | return numeroMax;
      | ^~~~~~
Compilation failed
cc380b3
Wed 13 Mar 2024 08:31:38 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
Compilation failed
a44f88c
